change: Improving .cards syntax and removing inline styles

--- a/libs/jade/dev/site/group.jade
+++ b/libs/jade/dev/site/group.jade
@@ -53,8 +53,8 @@ block content
 
 
 					div.col-sm-4.col-sm-12
-						.blog-sidebar--category(style="background-color:#c2bdde; margin-top: 1.25rem;")
-							h2(style="color:#57486b;") Find a specific benefit
+						.side-nav--finder
+							h2 Find a specific benefit
 							.dropdown
 								select#exampleSelect1
 									option Attendance Allowance
@@ -62,29 +62,6 @@ block content
 									option 3
 									option 4
 									option 5
-
-							button.btn.btn-secondary.right-button-icon Search
-
-
-						//.blog-sidebar--updates(style="background-color:#006278; height:100%;")
-							.card-banner-top
-								p(style="color:#fff;") Resources for advisers
-							.card-text
-								p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-								fieldset
-									label(for="standardField", style="color:#57486b;") Search your area
-									input#standardField(placeholder="", type="text")
-
-								button.btn.btn-secondary.right-button-icon Search roles
-
-						//.blog-lead
-							.blog-name
-								p Issues affecting people
-						//.data-display
-							p.data-display-intro Benefits
-							h3 52%
-							p of ESA applicants were wrongly placed in mandatory consideration in 2015
-							p #[a(href="#") Read more about our research ]
 
 						.callout--related
 							h3 If you need more help
