--- a/libs/jade/branding/cards.jade
+++ b/libs/jade/branding/cards.jade
@@ -18,13 +18,12 @@ block content
 	.articleContent
 		div
 			p Cards are flexible content containers, for adding snippets of text and images.
-			h2 Card uses
 
+			h2 Basic card
 			.example-box-plain
-				label Basic card
 				.cards
 					.card-image-top
-						img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+						img(src="#{dir}images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 					.card-text
 						h3 Title
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
@@ -40,53 +39,21 @@ block content
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
-
-			//.example-box-plain
-				label Landscape card
-				.cards
-					.row(style="margin:0;")
-						//.card-banner-top(style="color:#fff; background-color:#004b88;")
-							p Header
-						.span6
-							.card-image-left
-								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
-						.span6
-							.card-text-left
-								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-			//pre
-				code.language-html
-					| &lt;div class="cards"&gt;
-					| 	&lt;div class="row"&gt;
-					| 		&lt;div class="span6"&gt;
-					| 			&lt;div class="card-image-left"&gt;
-					| 				&lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
-					| 			&lt;/div&gt;
-					| 		&lt;/div&gt;
-					| 		&lt;div class="span6"&gt;
-					| 			&lt;div class="card-text-left"&gt;
-					| 				&lt;h3&gt;Title&lt;/h3&gt;
-					| 				&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| 			&lt;/div&gt;
-					| 		&lt;/div&gt;
-					| 	&lt;/div&gt;
-					| &lt;/div&gt;
-
-
+			h2 Extending
 			.example-box-plain
-				label Extending
 				.row
 					.span6
 						.cards
-							.card-banner-top(style="color:#fff; background-color:#004b88;")
-								p Header
+							.card-banner-top(style="background-color:#004b88;")
+								h3(style="color:#fff;") Header
 							.card-image-top
-								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+								img(src="#{dir}images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.span6
 						.cards
 							.card-image-top
-								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+								img(src="#{dir}images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 							.card-text
 								h3 Title
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
@@ -116,34 +83,34 @@ block content
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
+			h2 Branding
 			.example-box-plain
-				label Branding
 				.row
 					.span6
-						.cards(style="color:#fff; background-color:#006278;")
-							.card-banner-top(style="background-color:#006278;")
-								p(style="color:#fff;") Campaigns
+						.cards-branding--teal
+							.card-banner-top
+								p Campaigns
 							.card-image-top
-								img(src="images/mother_with_children.jpg" alt="Mother with two daughters")
+								img(src="#{dir}images/mother_with_children.jpg" alt="Mother with two daughters")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 								button.btn.btn-primary.right-button-icon(type="button") Continue
 
 					.span6
-						.cards(style="color:#fff; background-color:#32457E;")
+						.cards-branding--purple
 							.card-banner-top
-								p(style="color:#fff;") Policy
+								p Policy
 							.card-image-top
-								img(src="images/laptop-branding.png" alt="Laptop")
+								img(src="#{dir}images/laptop-branding.png" alt="Laptop")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-								button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
+								button.btn.btn-primary.right-button-icon(type="button") Continue
 
 			pre
 				code.language-html
-					| &lt;div style="color:#fff; background-color:#006278;" class="cards"&gt;
-					| 	&lt;div style="background-color:#006278;" class="card-banner-top"&gt;
-					| 		&lt;p style="color:#fff;"&gt;Campaigns&lt;/p&gt;
+					| &lt;div class="cards-branding--teal"&gt;
+					| 	&lt;div class="card-banner-top"&gt;
+					| 		&lt;p&gt;Campaigns&lt;/p&gt;
 					| 	&lt;/div&gt;
 					| 	&lt;div class="card-image-top"&gt;
 					|		&lt;img src="images/mother_with_children.jpg" alt="Mother with two daughters"&gt;
@@ -153,15 +120,15 @@ block content
 					| 		&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
-					| &lt;div style="color:#fff; background-color:#32457E;" class="cards"&gt;
+					| &lt;div class="cards-branding--purple"&gt;
 					| 	&lt;div class="card-banner-top"&gt;
-					| 		&lt;p style="color:#fff;"&gt;Policy&lt;/p&gt;
+					| 		&lt;p&gt;Policy&lt;/p&gt;
 					| 	&lt;/div&gt;
 					| 	&lt;div class="card-image-top"&gt;
 					|		&lt;img src="images/laptop-branding.png" alt="Laptop"&gt;
 					|	&lt;/div&gt;
 					| 	&lt;div class="card-text"&gt;
 					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| 		&lt;button type="button" style="background-color:#FFBF47; border-color:#FFBF47;" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+					| 		&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
