--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -5,12 +5,9 @@
  */
 
 .main-content__sidebar {
-	//float: left;
-	//clear: left;
 	width: @width-span-4;
 	overflow: hidden; // Stop margin collapsing issues
 	margin-bottom: @box-spacing*1.5;
-	//padding: @box-spacing @box-spacing-vertical;
 	margin: 0;
 
 	@media ( max-width: @breakpoint-content ) {
@@ -152,225 +149,13 @@
     }
 }
 
-.side-nav {
-	.main-content__sidebar;
-
-	@media screen and (max-width: @breakpoint-content) {
-		float: none;
-		width: 100%;
-	}
-
-	ul {
-		color: @text-color;
-		list-style: none;
-		padding: 0;
-	}
-	li {
-		padding: 0;
-		margin: 0;
-		//border-bottom: 0.1em solid @blue-light;
-	}
-	li:last-child {
-	   border-bottom: none;
-	}
-	li.current {
-		font-weight: @font-weight-bold;
-		background-color: @blue-lighter;
-		padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
-		margin: 0;
-		border-bottom: 0.1em solid @blue-light;
-	}
-	li.title,
-	li.side-nav__group {
-		font-weight: @font-weight-bold;
-		background-color: @blue-light;
-		color: @heritage-blue;
-		margin: 0;
-		border-bottom: 0.1em solid @white;
-
-		.side-nav__group-title {
-			display: block;
-			padding: @box-spacing*.7 @box-spacing*.6 @box-spacing*.9 @box-spacing*.6;
-		}
-	}
-	li.side-nav__item {
-		padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
-
-		a {
-			text-decoration: none;
-			padding: 0;
-		}
-
-		&.-current {
-			font-weight: @font-weight-bold;
-			background-color: @blue-lighter;
-			border-bottom: 0.1em solid @blue-light;
-		}
-
-		&:hover {
-			background-color: @gray-6;
-		}
-	}
-	> h2 {
-		background: @heritage-blue;
-		margin: 0;
-		font-size: @font-size-medium;
-		padding: .7em .5em; // This is supposed to be the same height as the main title
-
-		& > a {
-			color: @white;
-		}
-	}
-	ul,
-	li {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-	}
-	> ul a {
-		display: block;
-		padding: .5em;
-		color: black;
-	}
-
-	// Messy selector to override the selector above
-	> ul &__current {
-		font-weight: @font-weight-bold;
-		position: relative; // To absolutely position to the icon
-		padding-right: 2em;
-	}
-
-	&__current__icon {
-		position: absolute;
-		right: .5em;
-		top: 50%;
-		font-size: 150%;
-		margin-top: -.7em;
-	}
-
-	&__ul--level2 > li > a {
-		padding-left: 1em;
-	}
-	&__ul--level3 > li > a {
-		padding-left: 1.5em;
-	}
-	&__ul--level4 > li > a {
-		padding-left: 2em;
-	}
-	&__ul--level5 > li > a {
-		padding-left: 2.5em;
-	}
-	&__ul--level6 > li > a {
-		padding-left: 3em;
-	}
-	&__ul--level7 > li > a {
-		padding-left: 3.5em;
-	}
-	&__ul--level8 > li > a {
-		padding-left: 4em;
-	}
-
-
-	// Level 1
-	&--levels-1 &__ul--level1 > li {
-		background-color: @colour-nav-7;
-	}
-
-	&--levels-2 &__ul--level1 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 2
-	&--levels-3 &__ul--level1 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-3 &__ul--level2 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 3
-	&--levels-4 &__ul--level1 > li {
-		background-color: @colour-nav-2;
-	}
-	&--levels-4 &__ul--level2 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-4 &__ul--level3 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 4
-	&--levels-5 &__ul--level1 > li {
-		background-color: @colour-nav-1;
-	}
-	&--levels-5 &__ul--level2 > li {
-		background-color: @colour-nav-2;
-	}
-	&--levels-5 &__ul--level3 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-5 &__ul--level4 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 5
-	&--levels-6 &__ul--level1 > li {
-		background-color: @colour-nav-1;
-	}
-	&--levels-6 &__ul--level2 > li {
-		background-color: @colour-nav-2;
-	}
-	&--levels-6 &__ul--level3 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-6 &__ul--level4 > li {
-		background-color: @colour-nav-4;
-	}
-	&--levels-6 &__ul--level5 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 6
-	&--levels-7 &__ul--level1 > li {
-		background-color: @colour-nav-1;
-	}
-	&--levels-7 &__ul--level2 > li {
-		background-color: @colour-nav-2;
-	}
-	&--levels-7 &__ul--level3 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-7 &__ul--level4 > li {
-		background-color: @colour-nav-4;
-	}
-	&--levels-7 &__ul--level5 > li {
-		background-color: @colour-nav-5;
-	}
-	&--levels-7 &__ul--level6 > li {
-		background-color: @colour-nav-7;
-	}
-
-	// Level 7
-	&--levels-8 &__ul--level1 > li {
-		background-color: @colour-nav-1;
-	}
-	&--levels-8 &__ul--level2  li {
-		background-color: @colour-nav-2;
-	}
-	&--levels-8 &__ul--level3 > li {
-		background-color: @colour-nav-3;
-	}
-	&--levels-8 &__ul--level4 > li {
-		background-color: @colour-nav-4;
-	}
-	&--levels-8 &__ul--level5 > li {
-		background-color: @colour-nav-5;
-	}
-	&--levels-8 &__ul--level6 > li {
-		background-color: @colour-nav-6;
-	}
-	&--levels-8 &__ul--level7 > li {
-		background-color: @colour-nav-7;
+.side-nav--finder {
+	.well;
+	background-color: @generous-mauve;
+	h1,
+	h2,
+	h3 {
+		color: @responsible-purple;
 	}
 }
 
