--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -64,6 +64,10 @@ html.no-js
 					.blog-header--branding
 						a(href="#") #{blogname}
 
+				.blog-header--branding
+					p Blog
+					h1 Policy blog
+
 		else
 			header#main-nav-beta
 				.branding
