add: Added two new accessibility icons - Wheelchair icon - Hearing loop icon

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -281,4 +281,6 @@
 @i-linkedin:				"\e906";
 @i-spinner:					"\e903";
 @i-cita:					"\e904";
+@i-hearing-loop:			"\e908";
+@i-wheelchair-access:		"\267f";
 @i-zws: 					"_";
