--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1160,6 +1160,14 @@ div.tooltip:before {
         .spinner;
     }
 
+    .i-wheelchair-access .icon:before {
+        content: @i-wheelchair-access;
+    }
+
+    .i-hearing-loop .icon:before {
+        content: @i-hearing-loop;
+    }
+
     .brand-accelerator .icon-brand:before {
         content: @brand-accelerator;
     }
