--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -298,6 +298,16 @@ block content
 						td vertical dots
 						td.variable @i-vertical-dots
 						td.unicode \e901
+					tr.i-wheelchair-access
+						td.icon
+						td wheelchair access
+						td.variable @i-wheelchair-access
+						td.unicode \e626
+					tr.i-hearing-loop
+						td.icon
+						td hearing-loop
+						td.variable @i-hearing-loop
+						td.unicode \e901
 					tr.i-cita
 						td.icon
 						td cita
