--- a/libs/jade/dev/site/locator.jade
+++ b/libs/jade/dev/site/locator.jade
@@ -37,6 +37,8 @@ block content
 								span(style="font-weight: bold;") 020 8315 1940
 								br
 								| 0.22 miles from Bromley, London, London
+								br
+								span.accessibility #[span.i &#x267f;] #[span.i &#xe908;]
 							.col-sm-6.col-md-7
 								| Community House South Street,
 								br
@@ -51,6 +53,8 @@ block content
 						.flex-row
 							.col-sm-6.col-md-5(style="padding-right: 2rem;")
 								| 1.61 miles from Bromley, London, London
+								br
+								span.accessibility #[span.i &#x267f;] #[span.i &#xe908;]
 							.col-sm-6.col-md-7
 								| Downham Health and Leisure Centre 7- 9 Moorside Road,
 								br
