--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -21,6 +21,10 @@
         .description {
             margin: .5rem 0;
         }
+        .accessibility {
+            font-size: 1.5em;
+            color: @inventive-teal;
+        }
         .section {
             padding: 0;
             margin: 0;
