add: initial commit of template letter layout in page

--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -184,6 +184,13 @@ blockquote,
     h2 {
         color: @heritage-blue
     }
+
+    #letter {
+        @media (min-width:@screen-md-min) {
+            padding-left: 0;
+            margin-top: 1rem;        
+        }
+    }
 }
 
 .well--outline--warning {
