--- a/libs/modules/letter.less
+++ b/libs/modules/letter.less
@@ -27,3 +27,8 @@
 		padding-left: 4rem;
 	}
 }
+.letter-steps p {
+    font-weight: @font-weight-bold;
+    font-size: @font-size-base;
+    color: @gray-2;
+}
