--- a/libs/site.less
+++ b/libs/site.less
@@ -89,6 +89,7 @@
 @import "modules/financial-statement";
 @import "modules/epi-templates";
 @import "modules/speech-lines";
+@import "modules/tabs";
 
 // Styles for new site styles
 @import "modules/main-nav-v1";
