--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -266,7 +266,7 @@ html.no-js
 		script(src="#{dir}js/jquery.fn.cssSlide.js")
 		script(src="#{dir}js/revealable.js")
 		script(src="#{dir}js/prism.js")
-		script(src="#{dir}js/smooth.js")
+		//script(src="#{dir}js/smooth.js")
 		script(src="#{dir}js/jquery.fn.top-sticky.js")
 		//script(src="#{dir}js/advisor.js")
 		script(src="#{dir}js/sidebar.js")
