--- a/libs/jade/dev/site/bureau.jade
+++ b/libs/jade/dev/site/bureau.jade
@@ -17,7 +17,7 @@ block content
 		.fullwidth-content
 			h1(style="margin-top: 0;") #{title}
 			.flex-row
-				.col-md-4.col-sm-6
+				.col-sm-6
 					p
 						a advicecabthorne@fsmail.net
 						br
@@ -26,121 +26,183 @@ block content
 						| #[strong Debt Line] 01405 741457
 						br
 						| #[strong Benefit Line] 01405 816702
-				.col-md-4.col-sm-6
+				.col-sm-6
 					p Thorne Office, Marriott House 5a Browns Lane Thorne
 						| DONCASTER
 						br
 						| South Yorkshire
 						br
 						| DN8 5AF
-				.col-md-4.col-sm-12
-					p #[span.i &#x267f;] Wheelchair accessible
-						br
-						| #[span.i &#xe908;] Induction loop
-						br
-						| Wheelchair toilet access
-						br
-						| Internet advice access
 
 	.fullwidth-content
-		.col-sm-8
-			h2 About our advice service
+		.flex-row
+			.col-sm-8
+				h2 About our advice service
 
-			p Please telephone 0844 499 4137 between 10:00-2:00 Monday & Tuesday or 10:00-11:30 Wednesday for a brief assessment of your enquiry.
-			p Alternatively, drop in to Thorne bureau on a Monday between 10:00-2:00 and Wednesday between 10:00-12:30 where a face to face assessment will be conducted.
-			p Forthcoming closures:
-			p **Please note that we are closed on Bank Holidays**
+				p Please telephone 0844 499 4137 between 10:00-2:00 Monday & Tuesday or 10:00-11:30 Wednesday for a brief assessment of your enquiry.
+				p Alternatively, drop in to Thorne bureau on a Monday between 10:00-2:00 and Wednesday between 10:00-12:30 where a face to face assessment will be conducted.
+				p Forthcoming closures:
+				p **Please note that we are closed on Bank Holidays**
 
-		.col-sm-12
-			h2 Advice session times
+			.col-sm-4
+				h2 Access details
+				p #[span.i &#x267f;] Wheelchair accessible
+					br
+					| #[span.i &#xe908;] Induction loop
+					br
+					| Wheelchair toilet access
+					br
+					| Internet advice access
 
-			.tab-area
-				#tabone.content tab one content
-				#tabtwo.content tab two content
-				.tabs
-					a(href="#tabone") Tab one
-					a(href="#tabtwo") Tab two
+			.col-sm-12
+				h2 Advice session times
 
-			//.tab-group
-				.tab
-					input(type="radio" id="one" name="tab-group" checked)
-					label(for="one") References
-					.content
-						button.btn-secondary.btn-small(type="button") Print all
-						button.btn-warning.btn-small(type="button" style="float:right;") Clear all
+				//.tab-area
+					#tabone.content tab one content
+					#tabtwo.content tab two content
+					.tabs
+						a(href="#tabone") Tab one
+						a(href="#tabtwo") Tab two
 
-						.email-links
-							.email-links-breadcrumb
-								| Sick or disabled people and carers  >  PIP
-							h2 Applying for ESA
+				//.tab-group
+					.tab
+						input(type="radio" id="one" name="tab-group" checked)
+						label(for="one") References
+						.content
+							button.btn-secondary.btn-small(type="button") Print all
+							button.btn-warning.btn-small(type="button" style="float:right;") Clear all
 
-						.email-links
-							.email-links-breadcrumb
-								| Sick or disabled people and carers  >  PIP
-							h2 Applying for ESA
+							.email-links
+								.email-links-breadcrumb
+									| Sick or disabled people and carers  >  PIP
+								h2 Applying for ESA
 
-						.email-links
-							.email-links-breadcrumb
-								| Sick or disabled people and carers  >  PIP
-							h2 Applying for ESA
+							.email-links
+								.email-links-breadcrumb
+									| Sick or disabled people and carers  >  PIP
+								h2 Applying for ESA
+
+							.email-links
+								.email-links-breadcrumb
+									| Sick or disabled people and carers  >  PIP
+								h2 Applying for ESA
 
 
-				.tab
-					input(type="radio" id="two" name="tab-group")
-					label(for="two") Email
-					.content
-						div
-							p Send your saved references to yours, a friend or family members email address
-							fieldset
-								label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Your name
-								input(id="standardField" placeholder="" type="text")
+					.tab
+						input(type="radio" id="two" name="tab-group")
+						label(for="two") Email
+						.content
+							div
+								p Send your saved references to yours, a friend or family members email address
+								fieldset
+									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Your name
+									input(id="standardField" placeholder="" type="text")
 
-							fieldset
-								label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Recipients email address
-								span.form-hint This can be your own, or you can add multiple addresses seperated with a comma
-								input(id="standardField" placeholder="" type="email")
+								fieldset
+									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Recipients email address
+									span.form-hint This can be your own, or you can add multiple addresses seperated with a comma
+									input(id="standardField" placeholder="" type="email")
 
-							button.btn-secondary.email-button-icon(type="button") Send email
+								button.btn-secondary.email-button-icon(type="button") Send email
 
-			//.table-responsive
-				.inner
-					table
-						thead
-							tr
-								th(width="10%")
-								th(colspan="2") Advice session times
-								th(colspan="2") Telephone session times
-						tbody
-							tr
-								td Monday
-								td(width="15%") 10.00 - 14.00
-								td(width="30%") Debt appointments only.
-								td(width="15%") 10.00 - 14.00
-								td(width="30%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-							tr
-								td Tuesday
-								td
-								td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
-								td 10.00 - 14.00
-								td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-							tr
-								td Wednesday
-								td 10.00 - 12.30
-								td General drop-in session where a brief assessment will be conducted. From 5th June 2013
-								td 10.00 - 14.00
-								td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
-							tr
-								td Thursday
-								td
-								td Debt appointments only.
-								td
-								td Telephone line closed
-							tr
-								td Friday
-								td
-								td Closed
-								td
-								td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
+				.table-responsive
+					.inner
+						table
+							thead
+								tr
+									th(width="10%")
+									th(colspan="2") Advice session times
+									th(colspan="2") Telephone session times
+							tbody
+								tr
+									th Monday
+									td(width="15%") 10.00 - 14.00
+									td(width="30%") Debt appointments only.
+									td(width="15%") 10.00 - 14.00
+									td(width="30%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+								tr
+									th Tuesday
+									td
+									td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
+									td 10.00 - 14.00
+									td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+								tr
+									th Wednesday
+									td 10.00 - 12.30
+									td General drop-in session where a brief assessment will be conducted. From 5th June 2013
+									td 10.00 - 14.00
+									td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
+								tr
+									th Thursday
+									td
+									td Debt appointments only.
+									td
+									td Telephone line closed
+								tr
+									th Friday
+									td
+									td Closed
+									td
+									td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
+
+				//.table-responsive
+					.inner
+						table
+							thead
+								tr
+									th
+									th(colspan="2") Advice session times
+							tbody
+								tr
+									th(width="15%") Monday
+									td(width="20%") 10.00 - 14.00
+									td(width="65%") Debt appointments only.
+								tr
+									th Tuesday
+									td
+									td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
+								tr
+									th Wednesday
+									td 10.00 - 12.30
+									td General drop-in session where a brief assessment will be conducted. From 5th June 2013
+								tr
+									th Thursday
+									td
+									td Debt appointments only.
+								tr
+									th Friday
+									td
+									td Closed
+
+				//.table-responsive
+					.inner
+						table
+							thead
+								tr
+									th
+									th(colspan="2") Telephone session times
+							tbody
+								tr
+									th(width="15%") Monday
+									td(width="20%") 10.00 - 14.00
+									td(width="65%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+								tr
+									th Tuesday
+									td 10.00 - 14.00
+									td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+								tr
+									th Wednesday
+									td 10.00 - 14.00
+									td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
+								tr
+									th Thursday
+									td
+									td Telephone line closed
+								tr
+									th Friday
+									td
+									td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
+
 
 	.fullwidth-gray
 		.fullwidth-content
