change: Section notices now wrap line beside badges, rather than under them

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -26,6 +26,12 @@
         background-color: @inventive-teal;
         color: @white;
     }
+    .section-notice__content {
+        padding-left: 7em;
+        @media( max-width: @screen-sm-max ) {
+            padding-left: 6em;
+        }
+    }
 }
 
 .dap-panel--adviser,
