--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -11,10 +11,19 @@
         padding: @box-spacing-horizontal 0 0 @box-spacing-horizontal;
         border-bottom: @gray-7 1px solid;
         background-color: @white;
+        position: relative;
         .badge {
             background-color: @green-light;
             color: @text-color;
             margin-right: @box-spacing-horizontal;
+            .vertical-align(absolute);
+            left: 1rem;
+        }
+    }
+    .section-notice__content {
+        padding-left: 5.5em;
+        @media( max-width: @screen-sm-max ) {
+            padding-left: 5em;
         }
     }
     &__changing {
@@ -23,6 +32,12 @@
         }
         @media( max-width: @screen-xs-max ) {
             display: none;
+        }
+        .section-notice__content {
+            padding-left: 7em;
+            @media( max-width: @screen-sm-max ) {
+                padding-left: 6em;
+            }
         }
     }
     @media( max-width: @screen-xs-max ) {
