dev: padding on letter id, position of start button

--- a/libs/modules/letter.less
+++ b/libs/modules/letter.less
@@ -28,7 +28,7 @@
 	}
 }
 .letter-steps p {
-    font-weight: @font-weight-bold;
+    font-weight: @font-weight-bolder;
     font-size: @font-size-base;
     color: @gray-2;
 }
