--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -189,6 +189,7 @@ blockquote,
         @media (min-width:@screen-md-min) {
             padding-left: 0;
             margin-top: 1rem;        
+            margin-bottom: 1rem;        
         }
     }
 }
