--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -60,6 +60,8 @@ block content
 					li
 						a(href="forms/field-groups.html") Field groups
 					li
+						a(href="fields-conditional.html") Conditional fields
+					li
 						a(href="forms/validation.html") Form validation
 					li
 						a(href="forms/clipboard.html") Copy to clipboard
