--- a/libs/base/helpers.less
+++ b/libs/base/helpers.less
@@ -41,10 +41,11 @@
     &:focus {
         clip: auto;
         height: auto;
-        margin: 0;
+        //margin: 0;
         overflow: visible;
         position: static;
         width: auto;
+        outline: 2px solid @heritage-yellow;
     }
 }
 
