dev: change button out

--- a/libs/jade/dev/template-letter/template-letter.jade
+++ b/libs/jade/dev/template-letter/template-letter.jade
@@ -37,4 +37,4 @@ block content
 					option Law
 
 
-		a.btn.search-button-icon(href="letter-1.html") Search
+		a.btn.right-button-icon(href="letter-1.html") Continue
