dev: Added accessibility information for button vs link usage

--- a/libs/jade/accessibility.jade
+++ b/libs/jade/accessibility.jade
@@ -48,7 +48,9 @@ block content
 
 			h2 Button vs link
 
-			p Button or link?
+			p Links and buttons are not treated the same by all accessibility software. Because of this, it's important to use the correct one based on the situation.
+			p As a general rule, buttons should be used for functional events (such as form events), while links should be used only for linking.
+			p For example, to open a dialog you would use a button. Whereas to open a new tab, you'd use a link, as you'd be navigating to a new webpage.
 
 			h2 Expandable navigations
 
