--- a/libs/jade/dev/site/bureau.jade
+++ b/libs/jade/dev/site/bureau.jade
@@ -57,95 +57,7 @@ block content
 			.col-sm-12
 				h2 Advice session times
 
-				//.tab-area
-					#tabone.content tab one content
-					#tabtwo.content tab two content
-					.tabs
-						a(href="#tabone") Tab one
-						a(href="#tabtwo") Tab two
-
-				//.tab-group
-					.tab
-						input(type="radio" id="one" name="tab-group" checked)
-						label(for="one") References
-						.content
-							button.btn-secondary.btn-small(type="button") Print all
-							button.btn-warning.btn-small(type="button" style="float:right;") Clear all
-
-							.email-links
-								.email-links-breadcrumb
-									| Sick or disabled people and carers  >  PIP
-								h2 Applying for ESA
-
-							.email-links
-								.email-links-breadcrumb
-									| Sick or disabled people and carers  >  PIP
-								h2 Applying for ESA
-
-							.email-links
-								.email-links-breadcrumb
-									| Sick or disabled people and carers  >  PIP
-								h2 Applying for ESA
-
-
-					.tab
-						input(type="radio" id="two" name="tab-group")
-						label(for="two") Email
-						.content
-							div
-								p Send your saved references to yours, a friend or family members email address
-								fieldset
-									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Your name
-									input(id="standardField" placeholder="" type="text")
-
-								fieldset
-									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Recipients email address
-									span.form-hint This can be your own, or you can add multiple addresses seperated with a comma
-									input(id="standardField" placeholder="" type="email")
-
-								button.btn-secondary.email-button-icon(type="button") Send email
-
 				.table-responsive
-					.inner
-						table
-							thead
-								tr
-									th(width="10%")
-									th(colspan="2") Advice session times
-									th(colspan="2") Telephone session times
-							tbody
-								tr
-									th Monday
-									td(width="15%") 10.00 - 14.00
-									td(width="30%") Debt appointments only.
-									td(width="15%") 10.00 - 14.00
-									td(width="30%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-								tr
-									th Tuesday
-									td
-									td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
-									td 10.00 - 14.00
-									td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-								tr
-									th Wednesday
-									td 10.00 - 12.30
-									td General drop-in session where a brief assessment will be conducted. From 5th June 2013
-									td 10.00 - 14.00
-									td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
-								tr
-									th Thursday
-									td
-									td Debt appointments only.
-									td
-									td Telephone line closed
-								tr
-									th Friday
-									td
-									td Closed
-									td
-									td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
-
-				//.table-responsive
 					.inner
 						table
 							thead
@@ -174,7 +86,7 @@ block content
 									td
 									td Closed
 
-				//.table-responsive
+				.table-responsive
 					.inner
 						table
 							thead
@@ -208,10 +120,13 @@ block content
 		.fullwidth-content
 			.flex-row
 				.col-sm-6
-					label Enter your postcode for directions.
-					.field-group.field-group--buttons
-						input#field(type="search", placeholder="Enter your postcode")
-						button.btn Find&nbsp; #[span.i &#xe605;]
+					form(action="http://maps.google.co.uk/maps" method="get")
+						label Get directions from your location
+						.field-group.field-group--buttons
+							input#saddr(type="search", name="saddr")
+							button.btn(type="submit") Directions&nbsp; #[span.i &#xe605;]
+							input(type="hidden", name="daddr", value="DN8 5AF")
+							input(type="hidden", name="hl", value="en")
 
 			.flex-row
 				.col-sm-12
