dev: add: mockup results page

--- a/libs/jade/dev/debt/steps/step-2.jade
+++ b/libs/jade/dev/debt/steps/step-2.jade
@@ -104,7 +104,7 @@ block content
 						input(name="checkbox-inline", type="checkbox")
 						| Telephone, mobile phone, internet packages
 
-			a.button.btn.right-button-icon(href="prioritise-debts-results.html") Continue
+			a.button.btn.right-button-icon(href="step-2-results.html") Continue
 
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-3.html") Step 3 - Work out what you can afford to pay
