--- a/libs/modules/tabs.less
+++ b/libs/modules/tabs.less
@@ -94,36 +94,56 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	clear: both;
-	overflow: hidden;
 	width: 100%;
+
+	// Shameless clearfix
+	&:before,
+	&:after {
+	  content: ".";
+	  display: block;
+	  height: 0;
+	  overflow: hidden;
+	}
+	&:after {
+		clear: both;
+	}
+	zoom: 1;
+	// End shameless clearfix
+
 	li {
 		display: inline-block;
-		background-color: @heritage-yellow-lighter;
-		border: 2px solid @heritage-yellow-lighter;
+		background-color: @gray-7;
+		border: 1px solid @gray-6;
+		border-radius: 4px 4px 0 0;
+		border-bottom: 0;
 		padding: @box-spacing-vertical @box-spacing-horizontal;
 		margin: 0;
 		cursor: pointer;
 		float: left;
-		outline: none;
-		margin-right: 2px;
+		margin-right: 6px;
 		margin-top: 2px;
+		position: relative;
 		&:focus {
-			border: 2px solid @heritage-yellow;
+			outline: 2px solid @heritage-yellow;
 		}
 	}
 	li[aria-selected='true'] {
-		background-color: @heritage-yellow-lightest;
-		border: 2px solid @heritage-yellow-lightest;
-		&:focus {
-			border: 2px solid @heritage-yellow;
+		background-color: @white;
+		border-color: @heritage-blue;
+		z-index: 10;
+		&:after {
+			content: "";
+			position: absolute;
+			background-color: @white;
+			width: 100%;
+			height: 1px;
+			bottom: -1px;
+			left: 0;
 		}
 	}
 }
 
 .tab-panel {
-	padding: @box-spacing-vertical @box-spacing-horizontal;
-	background-color: @heritage-yellow-lightest;
 	margin-bottom: 1rem;
 	& > *:first-child {
 		margin-top: 0;
@@ -141,5 +161,11 @@
 		.tablist {
 			display: block;
 		}
+	}
+
+	.tab-panel {
+		padding: @box-spacing-vertical @box-spacing-horizontal;
+		border: 1px solid @heritage-blue;
+		background-color: @white;
 	}
 }
