--- a/libs/jade/dev/site/bureau.jade
+++ b/libs/jade/dev/site/bureau.jade
@@ -11,6 +11,48 @@ block breadcrumbs
 		{title: title}])
 
 block script
+	script.
+		$(document).ready(function() {
+			$("li[role='tab']").click(function(){
+				$("li[role='tab']").attr("aria-selected","false"); //deselect all tabs
+				$("div[role='tabpanel']").attr("aria-hidden","true"); //hide all panels
+
+				$(this).attr("aria-selected","true");  // select this tab
+				$("#"+($(this).attr("aria-controls"))).attr("aria-hidden","false");  // show this panel
+			});
+
+			$("li[role='tab']").keydown(function(ev) {
+				if (ev.which ==13) {
+					$(this).click()
+				}
+			});
+
+			//This adds keyboard function that pressing an arrow left or arrow right from the tabs toggle the tabs.
+			$("li[role='tab']").keydown(function(ev) {
+				var selected= $(this).attr("aria-selected");
+				if (ev.which ==39) {
+					if ($(this).next().length) {
+						$("li[role='tab']").attr("aria-selected","false"); //deselect all tabs
+						$("div[role='tabpanel']").attr("aria-hidden","true"); //hide all panels
+
+						$(this).attr("aria-selected","false").next().attr("aria-selected","true").focus();
+						var tabpanid= $("li[aria-selected='true']").attr("aria-controls");
+						$("div[role='tabpanel']").attr("aria-hidden","true");
+						$("#"+tabpanid).attr("aria-hidden","false");
+					}
+				} else if (ev.which ==37) {
+					if ($(this).prev().length) {
+						$("li[role='tab']").attr("aria-selected","false"); //deselect all tabs
+						$("div[role='tabpanel']").attr("aria-hidden","true"); //hide all panels
+
+						$(this).attr("aria-selected","false").prev().attr("aria-selected","true").focus();
+						var tabpanid= $("li[aria-selected='true']").attr("aria-controls");
+						$("div[role='tabpanel']").attr("aria-hidden","true");
+						$("#"+tabpanid).attr("aria-hidden","false");
+					}
+				}
+			});
+		});
 
 block content
 	.fullwidth-yellow
@@ -57,63 +99,68 @@ block content
 			.col-sm-12
 				h2 Advice session times
 
-				.table-responsive
-					.inner
-						table
-							thead
-								tr
-									th
-									th(colspan="2") Advice session times
-							tbody
-								tr
-									th(width="15%") Monday
-									td(width="20%") 10.00 - 14.00
-									td(width="65%") Debt appointments only.
-								tr
-									th Tuesday
-									td
-									td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
-								tr
-									th Wednesday
-									td 10.00 - 12.30
-									td General drop-in session where a brief assessment will be conducted. From 5th June 2013
-								tr
-									th Thursday
-									td
-									td Debt appointments only.
-								tr
-									th Friday
-									td
-									td Closed
+				ul.tablist(role='tablist')
+					li#tab1.tab(aria-controls='panel1', aria-selected='true', role='tab', tabindex='0') Advice session times
+					li#tab2.tab(aria-controls='panel2', role='tab', aria-selected='false', tabindex='0') Telephone session times
+				#panel1.tab-panel(aria-labelledby='tab1', role='tabpanel', aria-hidden='false')
+					.table-responsive
+						.inner
+							table
+								thead
+									tr
+										th
+										th(colspan="2") Advice session times
+								tbody
+									tr
+										th(width="15%") Monday
+										td(width="20%") 10.00 - 14.00
+										td(width="65%") Debt appointments only.
+									tr
+										th Tuesday
+										td
+										td *NEW* general drop-in session where a brief assessment will be conducted. General appts.
+									tr
+										th Wednesday
+										td 10.00 - 12.30
+										td General drop-in session where a brief assessment will be conducted. From 5th June 2013
+									tr
+										th Thursday
+										td
+										td Debt appointments only.
+									tr
+										th Friday
+										td
+										td Closed
 
-				.table-responsive
-					.inner
-						table
-							thead
-								tr
-									th
-									th(colspan="2") Telephone session times
-							tbody
-								tr
-									th(width="15%") Monday
-									td(width="20%") 10.00 - 14.00
-									td(width="65%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-								tr
-									th Tuesday
-									td 10.00 - 14.00
-									td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
-								tr
-									th Wednesday
-									td 10.00 - 14.00
-									td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
-								tr
-									th Thursday
-									td
-									td Telephone line closed
-								tr
-									th Friday
-									td
-									td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
+				#panel2.tab-panel(aria-labelledby='tab2', role='tabpanel', aria-hidden='true')
+					.table-responsive
+						.inner
+							table
+								thead
+									tr
+										th
+										th(colspan="2") Telephone session times
+								tbody
+									tr
+										th(width="15%") Monday
+										td(width="20%") 10.00 - 14.00
+										td(width="65%") TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+									tr
+										th Tuesday
+										td 10.00 - 14.00
+										td TEL 0844 499 4137 A brief assessment will be conducted to establish the best way to assist you.
+									tr
+										th Wednesday
+										td 10.00 - 14.00
+										td TEL 0844 499 4137 for a brief assessment . from June 5th 2013
+									tr
+										th Thursday
+										td
+										td Telephone line closed
+									tr
+										th Friday
+										td
+										td TEL 0844 499 4137 For a brief assessment . This service will close from June 7th 2013
 
 
 	.fullwidth-gray
