dev:add: Added description and Javascript to tabs documentation Also moved it under modules and linked it in sidebar and index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -73,6 +73,8 @@ block content
 						a(href="modules/callout.html") Callout
 					li
 						a(href="modules/revealable.html") Revealable
+					li
+						a(href="modules/tabs.html") Tabs
 					//li
 						a(href="modules/section-notice-dev.html") Section Notice Development
 					li
