--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -2,6 +2,7 @@
 +sidebar([
 	{href: "callout.html", title: "Callout"},
 	{href: "revealable.html", title: "Revealable"},
+	{href: "tabs.html", title: "Tabs"},
 	{href: "charts.html", title: "Charts"},
 	{href: "toolbar.html", title: "Content toolbar"},
 	{href: "sticky.html", title: "Sticky box"}
