dev: dev: update debt journey pages

--- a/libs/jade/dev/debt/get-help-with-your-debts-1.jade
+++ b/libs/jade/dev/debt/get-help-with-your-debts-1.jade
@@ -25,7 +25,11 @@ block content
 			li what you need might need specialist help with - and show you where to get this help
 		p You can come back to this guide as you complete each step and are ready to move onto the next one.
 		.callout--warning
-			p If you've received court papers, are facing eviction or are expecting bailiffs (or sheriff officers in Scotland) contact your local Citizens Advice immediately in England and Wales, Scotland or Northern Ireland.
+			p #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/") Contact your nearest] Citizens Advice immediately if:
+				ul
+					li you've received court papers
+					li you're about to be evicted
+					li you're expecting bailiffs
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-1.html") Step 1 - Gather information for each debt
 
@@ -37,6 +41,16 @@ block content
 
 		a.blockLinks(href="#{dir}dev/debt/steps/after-your-budget.html") After you’ve worked out your budget
 
-		.callout--related
-			h3 Get more help
-			p You can get free advice from one of our debt specialists. They can talk through your options and help you to find a solution. 
+		h2 Get more help
+
+		p You can get free advice from one of our #[a(href="#") debt specialists]. They can talk through your options and help you to find a solution.
+
+		h2 Next steps
+
+		p It's likely that your creditors will want to look at what you're paying them after a certain amount of time. This is so they can check whether your situation has improved.
+
+		p You can prepare for this by going through these steps again.
+
+		p You should also go through the steps again if your situation changes, to make sure you're dealing with your debt in the best way. This could be because you get a new job, or someone moves in or out of your household.
+
+		p If your money situation improves, make new offers to your creditors. This will mean your debts get paid off more quickly.
