--- a/libs/jade/dev/debt/steps/step-2-results.jade
+++ b/libs/jade/dev/debt/steps/step-2-results.jade
@@ -25,28 +25,32 @@ block sidebar
 
 block content
 	.articleContent
-		p When you have more than one debt, they need to be put in order so the most important ones are dealt with first. 
+		p When you have more than one debt, you must make sure you’re dealing with the most important ones first.
 
-		p Credit card companies and payday lenders tend to contact you the most, but other things like Council Tax and rent or mortgage debts are much more of a priority. This is because what can happen if you get behind on these is more serious.
+		p These are your ‘priority debts’.
+
+		p Priority debts are the ones that have the most serious consequences - like being evicted, losing your house or getting a court fine. 
+
+		p Use our tool below to see which of your debts is a ‘priority’ debt. This will show you how to decide which ones to deal with first.
 
 		.well--outline
 			h2 Priority debt
 			.well--outline--warning
 				h3 Mortgage/secured loan
-				p #[a(href="#") Talk to your mortgage lender straight away]
+				//p #[a(href="#") Talk to your mortgage lender straight away]
 
 			.well--outline--warning
 				h3 Council Tax arrears
-				p #[a(href="#") Talk to your council straight away]
+				//p #[a(href="#") Talk to your council straight away]
 
 			h2 Non-priority debt
 			.well--outline
 				h3 Overdraft
-				p #[a(href="#") Talk to your loan company straight away]
+				//p #[a(href="#") Talk to your loan company straight away]
 
 			.well--outline
 				h3 Telephone/mobile phone/internet packages		
-				p #[a(href="#") Talk to your telephone/mobile phone/internet provider straight away]
+				//p #[a(href="#") Talk to your telephone/mobile phone/internet provider straight away]
 
 			a.button.btn-secondary.restart-button-icon(href="step-2.html") Restart
 
