--- a/libs/jade/dev/debt/steps/step-1.jade
+++ b/libs/jade/dev/debt/steps/step-1.jade
@@ -25,10 +25,37 @@ block sidebar
 
 block content
 	.articleContent
-		p Collect together all the letters and emails you’ve had from your creditors and originals or copies of any credit agreements you’ve signed. If you don’t have an up-to-date statement from a creditor, you can ask them for one. This should tell you all the payments you’ve made and what’s left to pay.
-		p Make a list of all your creditors, and how much you owe each one. This will include things like Council Tax and mortgage or rent arrears, as well as credit cards or loan payments.
+		p Find any letters and emails you've had about your debts, along with the credit agreements you've signed.
 
-		p Use #[a.a-pdf-doc(href="#") this as a template to list your debts].
+		p For each debt, you need to find:
+		ul
+			li the name of the creditor or lender
+			li your account or reference number
+			li a copy of the loan agreement you signed (sometimes called a 'credit agreement' in your paperwork)
+			li details of how much the debt is now
+		
+		p If you don't have an up-to-date statement from a creditor, you can ask them for one. This will tell you all the payments you've made and what's left to pay.
+
+		p Make a list of your creditors and how much you owe each one. You can #[a(href="#") print and use our example table] to do this, or start a spreadsheet or list of your own.
+
+		h3 Example table
+
+		table
+			thead
+				tr
+					th(scope="col") Name or type of creditor
+					th(scope="col") Account or reference number
+					th(scope="col") Amount you owe
+			tbody
+				tr
+					td Example: NatWest mortgage
+					td BN6654-11
+					td £2350
+				tr
+					td Example: Mastercard
+					td 5299 - xxxx-xxxx-xxxx
+					td £11,235
+
 
 		a.blockLinks(href="#{dir}dev/debt/steps/step-2.html") Step 2 - Work out which debts are a priority
 		a.blockLinks.blocklinks--back(href="#{dir}dev/debt/get-help-with-your-debts-1.html") Get help with your debts
