dev:change: Added the accessibility page to the front page of cab-ui Moved the blog into 'resources'

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -18,7 +18,7 @@ block content
 					li
 						a.a-external(href="http://alphablog.citizensadvice.org.uk/2016/02/principles-for-digital/") Digital principles
 					li
-						a.a-external(href="http://alphablog.citizensadvice.org.uk/") Citizens Advice Digital team blog
+						a(href="accessibility.html") Accessibility
 			.span6-sm
 				h2(style="margin-top: 0;") Resources
 				ul
@@ -26,10 +26,8 @@ block content
 						a.a-external(href="https://github.com/citizensadvice/cab-ui") cab-ui repo
 					li
 						a.a-external(href="https://github.com/citizensadvice/cab-ui#including-in-a-project") Using cab-ui in your own project
-					//li
-						a.a-external(href="#") Content styleguide
-					//li
-						a.a-external(href="#") Brand guidelines
+					li
+						a.a-external(href="http://alphablog.citizensadvice.org.uk/") Citizens Advice Digital team blog
 
 		.flex-row
 			.span8-md
