--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -29,13 +29,14 @@ block content
 			li Reviewed, who/when the article was last reviewed
 			li Owner, who the page owner is
 		p The bottom toolbar is reserved for sharing functionality. LinkedIn should only be used on blogs, while Whatsapp and Messenger should only appear for mobiles.
+		p Each toolbar item should include a  #[code.code data-track] attribute to help identify if these sharing options are beneficial and supporting user's needs.
 		.example-box-plain
 			.title__subheading
 				| This advice is for
 				button#showSimpleModal.btn-secondary.btn-small(type="button")
 					span.screenreader This advice is for
 					| England
-				button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="Print") Print
+				button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="NewPrint") Print
 				button.toolbar-button.a-social-references(href="#!", data-track="References") References
 				span.info-extent Extent
 				span.info-reviewed Reviewed
@@ -43,11 +44,11 @@ block content
 				a.toolbar-button.a-social-word(href="https://www.citizensadvice.org.uk/Static/word/word-template-ew.dot") Word template
 			.title__subheading--footer
 				p Share this page. #[a(#) Find out more about sharing.]
-				a.a-social-whatsapp(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
-				a.a-social-messenger(href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);") Messenger
+				a.a-social-whatsapp(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);", data-track="Whatsapp") Whatsapp
+				a.a-social-messenger(href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);", data-track="Facebook Messenger") Messenger
 				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
 				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
-				a.a-social-linkedin(target="_blank") LinkedIn
+				a.a-social-linkedin(target="_blank", data-track="LinkedIn") LinkedIn
 				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				button.a-social-copy Copy link
 					.copied Copied!
