fix: Fixed broken link to coniditonal fields

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -58,7 +58,7 @@ block content
 					li
 						a(href="forms/field-groups.html") Field groups
 					li
-						a(href="fields-conditional.html") Conditional fields
+						a(href="forms/fields-conditional.html") Conditional fields
 					li
 						a(href="forms/validation.html") Form validation
 					li
